# 3DGS-Vulkan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: demo_fox_gs.ply  demo_office_gs.ply
example/android/: .gitignore  build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/androidTest/java/com/example/gsplat/vk/: ExampleInstrumentedTest.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: AndroidMain.cpp  AndroidMain.hpp  AndroidWindow.cpp  AndroidWindow.hpp  CMakeLists.txt  GameActivitySources.cpp  SceneLoader.hpp  native-lib.cpp
example/android/app/src/main/java/com/example/gsplat/vk/: MainActivity.java
example/android/app/src/main/res/values/: strings.xml  themes.xml
example/android/app/src/main/res/values-night/: themes.xml
example/android/app/src/test/java/com/example/gsplat/vk/: ExampleUnitTest.java
example/android/gradle/: libs.versions.toml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/win32/: CMakeLists.txt  WinMain.cpp
example/win32/windows/: BaseWindow.hpp  VulkanWindow.cpp  VulkanWindow.hpp  vulkanwindow.cpp  vulkanwindow.hpp
libs/glslang/win32/: MachineIndependent.lib  SPIRV-Tools-diff.lib  SPVRemapper.lib
libs/glslang/win32/debug/: GenericCodeGend.lib  MachineIndependentd.lib  OSDependentd.lib  SPIRV-Tools-diffd.lib  SPIRV-Tools-linkd.lib  SPIRV-Tools-lintd.lib  SPIRV-Tools-optd.lib  SPIRV-Tools-reduced.lib  SPIRV-Toolsd.lib  SPIRVd.lib  SPVRemapperd.lib  glslang-default-resource-limitsd.lib  glslangd.lib
libs/glslang/win32/release/: GenericCodeGen.lib  OSDependent.lib  SPIRV-Tools-link.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib
renderer/: GaussianRenderer.cpp  GaussianRenderer.hpp  Renderer.cpp  Renderer.hpp  renderer.cpp  renderer.hpp
renderer/common/: Constants.hpp  KeycodesCommon.hpp  LogCommon.hpp  VkCommon.cpp  VkCommon.hpp  glm_common.hpp  keycodes_common.hpp  log_common.hpp  vk_common.cpp  vk_common.hpp
renderer/resources/: Data.cpp  Data.hpp  Enums.hpp  Resource.hpp  data.cpp  vkcontext.cpp  vkcontext.hpp
renderer/resources/shaders/: gsplat.frag  gsplat.vert  gsplat_precomputed.vert  precompute.comp  sort.comp  sort_global_offset.comp  sort_seg_count.comp  sorting.comp
renderer/resources/vk/: BlendState.cpp  BlendState.hpp  Buffer.cpp  Buffer.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DisplaySurface.cpp  DisplaySurface.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Pipeline.cpp  Pipeline.hpp  PipelineTable.cpp  PipelineTable.hpp  RenderPass.cpp  RenderPass.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderModule.cpp  ShaderModule.hpp  Surface.cpp  Surface.hpp  VkContext.cpp  VkContext.hpp  VkObjects.hpp  VkResource.hpp  VkResourceBase.hpp  VkResourceManager.hpp  vkcontext.cpp  vkcontext.hpp  vulkanobj.hpp
renderer/resources/vk/managers/: BufferManager.cpp  BufferManager.hpp  CommandBufferManager.hpp  ImageManager.cpp  ImageManager.hpp  PipelineManager.cpp  ShaderManager.cpp  ShaderManager.hpp
renderer/resources/vk/vma/: VmaBuffer.cpp  VmaBuffer.hpp  VmaImage.cpp  VmaImage.hpp  VmaObject.hpp
renderer/scenes/: Camera.cpp  Camera.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Splat.cpp  Splat.hpp  UIOverlay.cpp  UIOverlay.hpp  camera.cpp  camera.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  splat.cpp  splat.hpp  uioverlay.cpp  uioverlay.hpp
renderer/utils/: Math.cpp  Math.hpp  Singleton.hpp  Utils.cpp  Utils.hpp  data.cpp  data.hpp  utils.cpp  utils.hpp
